portfoliov3/style.css
body {
  font-family: 'Open Sans';
  font-size: 28px;
  background-color: #e7e7e7;
  color: rgb(119, 119, 119);
}

h1 {
  font-family: 'Open Sans';
  font-size: 40px;
  font-weight:normal;
  padding-top: 70px;
  position: relative;
  text-decoration: none;
}

h2 {
  font-family: 'Open Sans';
  font-size: 28px;
  font-weight:normal;
  padding-top: 50px;
  margin-bottom: 10px;
  position: relative;
  text-decoration: none;
}

.border {
  position: absolute;
  top: 15%;
  left: 13.5%;
  width: 73%;
  bottom: 25%;
  background-color: transparent;
}

#doruk {
  font-size: 70px;
  color: inherit;
}

#u {
  color: #B71B1B;
  background-color: transparent;
  border-radius: 2px;
}

#doruk:hover #u {
  color: #eaeaea;
  background-color: #B71B1B;
  -webkit-animation: fade 0.7s;
  animation: fade 0.7s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}

@-webkit-keyframes fade {
  0% {color: #B71B1B; background-color: transparent;}
  100% {color: #eaeaea; background-color: #B71B1B;}
}
@keyframes fade {
  0% {color: #B71B1B; background-color: transparent;}
  100% {color: #eaeaea; background-color: #B71B1B;}
}

.nav-col {
  position: fixed;
  float: left;
}

.box {
  position: relative;
  top: 0px;
  left: 870px;
  width: 920px;
  transform: translateX(-50%);
  float: left;
}

.box-link {
  margin-bottom: 10px;
  position: relative;
  text-decoration: none;
  top: 77px;
  color: inherit;
  left: 12px;
}

.box-header {
  margin-bottom: 10px;
  position: relative;
  text-decoration: none;
  color: inherit;
}

#link1 {
  text-decoration: none;
  color: inherit;
}
#link1:visited {
  margin-bottom: inherit;
  color: inherit;
  text-decoration: none;
  text-decoration: inherit;
}
#link1:hover{
  color: #e9848d;
  -webkit-animation: fade1 0.3s;
  animation: fade1 0.3s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}
@-webkit-keyframes fade1 {
  0% {color: inherit;}
  100% {color: #e9848d;}
}
@keyframes fade1 {
  0% {color: inherit;}
  100% {color: #e9848d;}
}

#link2 {
  text-decoration: none;
  color: inherit;
}
#link2:visited {
  margin-bottom: inherit;
  color: inherit;
  text-decoration: none;
  text-decoration: inherit;
}
#link2:hover{
  color: #6fa0f5;
  -webkit-animation: fade2 0.3s;
  animation: fade2 0.3s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}
@-webkit-keyframes fade2 {
  0% {  color: inherit;}
  100% {color: #6fa0f5;}
}
@keyframes fade2 {
  0% {  color: inherit;}
  100% {color: #6fa0f5;}
}

#link3 {
  text-decoration: none;
    color: inherit;
}
#link3:visited {
  margin-bottom: inherit;
  color: inherit;
  text-decoration: none;
  text-decoration: inherit;
}
#link3:hover{
  color: #f59753;
  -webkit-animation: fade3 0.3s;
  animation: fade3 0.3s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}
@-webkit-keyframes fade3 {
  0% {  color: inherit;}
  100% {color: #f59753;}
}
@keyframes fade3 {
  0% {  color: inherit;}
  100% {color: #f59753;}
}

#link4 {
  text-decoration: none;
    color: inherit;
}
#link4:visited {
  margin-bottom: inherit;
  color: inherit;
  text-decoration: none;
  text-decoration: inherit;
}
#link4:hover{
  color: #95c46f;
  -webkit-animation: fade4 0.3s;
  animation: fade4 0.3s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}
@-webkit-keyframes fade4 {
  0% {color: inherit;}
  100% {color: #95c46f;}
}
@keyframes fade4 {
  0% {color: inherit;}
  100% {color: #95c46f;}
}

.proj {
  position: relative;
  background-color: #c5c5c5;
  text-align: center;
  width: 95%;
  left: 0%;
  margin-bottom: 50px;
  border-radius: 25px;
  box-shadow:  16px 16px 32px #a7a7a7, 
             -16px -16px 32px #e3e3e3;
}

object {
  border-radius: 10px;
}

#button {
  position: absolute;
  text-decoration: none;
  color: #fcfcfc;
  bottom: 1%;
  width: 100px;
  background: linear-gradient(145deg, #a51818, #c41d1d);
  margin: 5px;
  padding: 5px;
  border-radius: 8px;
}

#button:hover {
  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
  background-color: rgb(143, 19, 19);
}

#button:active {
  bottom: 0.5%;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
  background-color: rgb(143, 19, 19);
}

nav[data-toggle="toc"] {
  top: 42px;
  text-decoration: none;
}

li {
  list-style-type: none;
  text-decoration: none;
}

a {
  list-style-type: none;
}


nav[data-toggle=toc] .nav > li > a {
  display:block;
  padding:4px 10px;
  font-size: 20px;
  font-weight:500;
  /* color:#ADADAD; */
  color: inherit;
  text-decoration:none;
}

nav[data-toggle=toc] .nav>li>a:focus,
nav[data-toggle=toc] .nav>li>a:hover {
  padding-left:9px;
  color:#B71B1B;
  text-decoration:none;
  background-color:transparent;
  /* border-left:1px solid #B71B1B */
}
nav[data-toggle=toc] .nav-link.active,
nav[data-toggle=toc] .nav-link.active:focus,
nav[data-toggle=toc] .nav-link.active:hover {
  padding-left:8px;
  font-weight:700;
  color:#B71B1B;
  background-color:transparent;
  /* border-left:2px solid #B71B1B */
}
  
nav[data-toggle=toc] .nav-link + ul {
  display:none;
  padding-bottom:10px
}

nav[data-toggle=toc] .nav .nav>li>a {
  padding-top:1px;
  padding-bottom:1px;
  padding-left:10px;
  font-size:15px;
  font-weight:400
}

nav[data-toggle=toc] .nav .nav>li>a:focus,
nav[data-toggle=toc] .nav .nav>li>a:hover {
  padding-left:9px
}

nav[data-toggle=toc] .nav .nav>li>.active,
nav[data-toggle=toc] .nav .nav>li>.active:focus,
nav[data-toggle=toc] .nav .nav>li>.active:hover {
  padding-left:8px;
  font-weight:500
}
nav[data-toggle=toc] .nav-link.active+ul {
  display:block
}

svg {
  position: fixed;
  right: 0%;
  bottom: 0%;
  height: 310px;
  width: 410px;
  background-color: transparent;
}

